--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/twig-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "twbs/bootstrap": "v4.0.0"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
