--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,14 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/dbal": "v2.6.3",
+        "doctrine/orm": "v2.6.1",
+        "knplabs/knp-menu": "2.3.0",
+        "knplabs/knp-menu-bundle": "v2.2.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "v4.0.5",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/twig-bundle": "^4.0",
