--- a/composer.json
+++ b/composer.json
@@ -4,22 +4,31 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
-        "doctrine/dbal": "v2.6.3",
-        "doctrine/orm": "v2.6.1",
-        "knplabs/knp-menu": "2.3.0",
-        "knplabs/knp-menu-bundle": "v2.2.1",
+        "doctrine/dbal": "^v2.6.3",
+        "doctrine/orm": "^v2.6.1",
+        "knplabs/knp-menu": "^2.3.0",
+        "knplabs/knp-menu-bundle": "^v2.2.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
-        "symfony/form": "v4.0.5",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/monolog-bundle": "^3.2",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^4.0",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
         "symfony/yaml": "^4.0",
-        "twbs/bootstrap": "v4.0.0"
+        "twbs/bootstrap": "^v4.0.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "^4.0",
+        "symfony/maker-bundle": "^1.1",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
