--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-#APP_ENV=dev
+APP_ENV=dev
 #APP_ENV=prod
-APP_ENV=test
+#APP_ENV=test
 
 APP_SECRET=979a1ad3d0e80eca3f693a02ec908eb1
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
