--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "^4.0",
         "symfony/maker-bundle": "^1.1",
+        "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
