--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "symfony/browser-kit": "^4.0",
         "symfony/dotenv": "^4.0",
         "symfony/maker-bundle": "^1.1",
         "symfony/phpunit-bridge": "^4.0",
