--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
         "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/templating": "v4.0.6",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
