--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,7 +10,7 @@ doctrine:
         # configure these for your database server
         driver: 'pdo_pgsql'
         server_version: '9.6'
-        charset: utf8mb4
+        charset: utf8
 
         # With Symfony 3.3, remove the `resolve:` prefix
         url: '%env(resolve:DATABASE_URL)%'
